// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContactInfoInputs > Should NOT wrap the input fields if it is NOT inline 1`] = `
<div
  data-cy="contact-info-input"
>
  <p>
    One input component
  </p>
  <p>
    Another input component
  </p>
</div>
`;

exports[`ContactInfoInputs > Should wrap the input fields if it is inline 1`] = `
<div
  class="dpl-input__flex"
  data-cy="contact-info-input-inline"
>
  <div
    class="patron__input--desktop mr-16"
  >
    <p>
      One input component
    </p>
  </div>
  <div
    class="patron__input--desktop"
  >
    <p>
      Another input component
    </p>
  </div>
</div>
`;
